[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/scripts/jobs/cleanWindows.gd" type="Script" id=1]
[ext_resource path="res://assets/jobs/washWindows/window.png" type="Texture" id=2]
[ext_resource path="res://assets/jobs/washWindows/dirt.png" type="Texture" id=3]
[ext_resource path="res://assets/jobs/washWindows/sponge.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 139, 127 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 16 )

[node name="CircuitBreakers" type="TextureRect"]
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 2 )
stretch_mode = 1
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 181.0
margin_top = 53.0
margin_right = 458.0
margin_bottom = 307.0
texture = ExtResource( 3 )
expand = true

[node name="Area2D" type="Area2D" parent="TextureRect"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TextureRect/Area2D"]
position = Vector2( 139, 127 )
shape = SubResource( 1 )

[node name="TextureButton2" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 43.0
margin_top = 164.0
margin_right = 107.0
margin_bottom = 196.0
texture = ExtResource( 4 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 43.0
margin_top = 164.0
margin_right = 107.0
margin_bottom = 196.0
texture_normal = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="TextureButton"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TextureButton/Area2D"]
position = Vector2( 32, 16 )
shape = SubResource( 2 )

[connection signal="area_entered" from="TextureRect/Area2D" to="." method="_sponge_entered"]
[connection signal="area_exited" from="TextureRect/Area2D" to="." method="_sponge_exited"]
[connection signal="button_down" from="TextureButton" to="." method="_sponge_down"]
[connection signal="button_up" from="TextureButton" to="." method="_sponge_up"]
